--- a/jQuery/index.html
+++ b/jQuery/index.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id= "div1"></div>
+    <div>
+        <ul id="myUl">
+            <li >Hello</li>
+        </ul>
+        <input type="text" id="myInput">
+        <button id="myButton">Add Human</button>
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
